<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:text="@string/name"
                android:textColor="@color/headerColor"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"
                android:text="@string/designation"
                android:textColor="@color/headerColor"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/contact"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/call"
                android:drawableLeft="@android:drawable/sym_call_outgoing"
                android:drawablePadding="25dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:text="@string/call" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:drawablePadding="25dp"
                android:id="@+id/email"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:text="@string/email" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@android:drawable/stat_sys_download"
                android:drawablePadding="25dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:id="@+id/pdf"
                android:text="@string/pdf" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact"
        android:id="@+id/tabLayout"
        android:layout_marginTop="20dp">
    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabLayout">
    </android.support.v4.view.ViewPager>





</RelativeLayout>